# Advanced-Programming

./: .gitignore
Assignment1/: Assignment1.cabal
Assignment1/output/: curve.html  curve.txt  hilbert.html  peano3.html
Assignment1/src/: Curves.hs  Main.hs
Assignment2/: Assignment2.cabal  report.tex
Assignment2/app/: Main.hs
Assignment2/src/: SubsInterpreter.hs  SubsInterpreter1.hs
Assignment2/test/: ArrayComprSpec.hs  EnvSpec.hs  PrimitivesSpec.hs  SimpleFunctionsSpec.hs
Assignment3/: Assignment3.cabal  report.tex  stack.yaml
Assignment3/src/: Subs.hs  SubsParser.hs
Assignment3/src/Interpreter/: Impl.hs
Assignment3/src/Parser/: Impl.hs  ParseAssignment.hs  ParseFactor.hs  Utilities.hs
Assignment3/test/: AssignableParserSpec.hs  AssignmentSpec.hs  ComparableParserSpec.hs  ComplexEndToEndSpec.hs  FactorParserSpec.hs  NumberParserSpec.hs  OperatorFreeSpec.hs  SimpleEndToEndSpec.hs  SimpleInputsSpec.hs  StringParserSpec.hs  TermParserSpec.hs
Assignment4/: report.tex
Assignment4/src/: tests.pl  twitbook.pl
Assignment5/: report.tex
Assignment5/src/: counter.erl  kaboose.erl  kaboose_tests.erl  simple_test.erl  test_suite.erl
Assignment6/: greeter.erl  report.tex
Assignment6/src/: add.erl  counter.erl  counter_tests.erl  counter_tryout.erl  exception.erl  failer.erl  flamingo.erl  flamingo_tests.erl  greeter.erl  greeting_tryout.erl  hiphop.erl  hiphop_tests.erl  hiphop_tryout.erl  initialise_fail.erl
