name:                Assignment2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Assignment2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Assignment2
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , Assignment2

library
  exposed-modules:     SubsInterpreter, SubsAst
  other-modules:       
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers

test-suite test-Assignment2
  other-modules:	ArrayComprSpec
                      , SimpleFunctionsSpec
                      , PrimitivesSpec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , QuickCheck
                      , Assignment2
