name:                Assignment3
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/Assignment3#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Assignment3
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , Assignment3

library
  exposed-modules:     SubsParser, Parser.Impl, SubsAst
  other-modules:       Parser.ParseFactor
                     , Parser.ParseAssignment
                     , Parser.Utilities
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , parsec


test-suite test-Assignment3
  other-modules:	SimpleInputsSpec
                      , NumberParserSpec
                      , SimpleEndToEndSpec
                      , ComplexEndToEndSpec
                      , StringParserSpec
                      , FactorParserSpec
                      , OperatorFreeSpec
                      , TermParserSpec
                      , ComparableParserSpec
                      , AssignableParserSpec
                      , AssignmentSpec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , QuickCheck >= 2.10
                      , parsec
                      , Assignment3
